--- a/json-view/package.json
+++ b/json-view/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.7.5",
+    "normalize.css": "^8.0.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
